flush it out more

--- a/themes/hugo-theme-stack/layouts/404.html
+++ b/themes/hugo-theme-stack/layouts/404.html
@@ -2,6 +2,7 @@
     <div class="not-found-card">
         <h1 class="article-title">{{ T "notFound.title" }}</h1>
         <h2 class="article-subtitle">{{ T "notFound.subtitle" }}</h2>
+        <p><img src="https://media.giphy.com/media/12XMGIWtrHBl5e/giphy.gif" alt="" /></p>
     </div>
     {{ partialCached "footer/footer" . }}
 {{ end }}
