--- a/themes/hugo-theme-stack/assets/scss/custom.scss
+++ b/themes/hugo-theme-stack/assets/scss/custom.scss
@@ -1,1 +1,24 @@
 /* Place your custom SCSS in HUGO_SITE_FOLDER/assets/scss/custom.scss */
+
+  
+body {
+  text-align: justify;
+  max-width: 1000px;
+  margin: auto;
+}
+
+h1 {
+  text-align: left;
+  font-weight: 900;
+}
+
+h2 {
+  text-align: left;
+  font-weight: 700;
+}
+  
+h3 {
+  text-align: left;
+  font-weight: 500;
+  font-style: italic;
+}
