--- a/themes/hugo-theme-stack/assets/scss/custom.scss
+++ b/themes/hugo-theme-stack/assets/scss/custom.scss
@@ -9,19 +9,19 @@ body {
 }
 
 h1 {
-  font-family: "Roboto", sans-serif
+  font-family: "Roboto", sans-serif;
   text-align: left;
   font-weight: 900;
 }
 
 h2 {
-  font-family: "Roboto", sans-serif
+  font-family: "Roboto", sans-serif;
   text-align: left;
   font-weight: 700;
 }
   
 h3 {
-  font-family: "Roboto", sans-serif
+  font-family: "Roboto", sans-serif;
   text-align: left;
   font-weight: 500;
   font-style: italic;
