--- a/themes/hugo-theme-stack/assets/scss/partials/sidebar.scss
+++ b/themes/hugo-theme-stack/assets/scss/partials/sidebar.scss
@@ -99,7 +99,7 @@
     }
 
     .site-name {
-        color: var(--accent-color);
+        color: var(--accent-color-darker);
         font-size: 2.4rem;
         margin: 0;
 
